lab2/.metadata/.plugins/org.eclipse.cdt.ui/Lab2_NTLuan.build.log
14:27:29 **** Incremental Build of configuration Debug for project Lab2_NTLuan ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'display7SEG':
../Core/Src/main.c:308:17: error: 'index' undeclared (first use in this function)
  308 |         switch (index) {
      |                 ^~~~~
../Core/Src/main.c:308:17: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:27:30 Build Failed. 2 errors, 0 warnings. (took 317ms)

